kubernetes/immich/09-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-buffering
  namespace: immich
spec:
  buffering:
    maxRequestBodyBytes: 0
    memRequestBodyBytes: 10485760
